# guided-agent

./: .gitignore  Cargo.toml  README.md  test-career.md  test-gamedex.md  test-kb-doc.md
.github/: copilot-instructions.md
.guided/: config.yaml
.guided/architecture/: logging.quiet-mode.md  phase-5.3-chunk.md  phase-5.3.2-rag-answering.md  phase3.prompt-system.md  phase5_1.knowledge-ranking.md
.guided/knowledge/career/: config.yaml  index.sqlite
.guided/knowledge/career/lance/chunks.lance/_transactions/: 0-2f917920-1b90-4b0a-9f96-a564917e8fcf.txn  1-acb20891-5a92-4cf3-8a76-347481a1db3f.txn  10-e7d22736-cfe2-450d-9daf-c26d02089b69.txn  11-c144acd8-b681-4843-9879-d0aaa3223b6e.txn  12-5db90529-b36b-46eb-9253-660405959e8c.txn  13-a3d863bc-dd9a-44b7-85c7-c38014c6e0a9.txn  14-8ecb3f1d-25e4-4148-ad52-206480353ce5.txn  15-c7329774-d26e-4c16-99f3-8f0bfbef8b6b.txn  2-77e89396-4185-4ffc-8e1d-f8dbcc00b6e1.txn  3-58ccc129-1eca-4f8d-9e29-0cd253d6af13.txn  4-9e22a3dd-5121-46d5-bf61-1d7b660e9371.txn  5-d1424b50-d812-42ea-931a-6d3675ca1c56.txn  6-a2c4d7e0-4c5d-450f-b6af-78bec1a88124.txn  7-04af9028-3168-4e6e-9784-d46073a3b844.txn  8-d0531089-02ca-4ff2-a32c-f11eb533e38e.txn  9-59a4b35c-a566-456e-8e09-f3509d3c7dbd.txn
.guided/knowledge/career/lance/chunks.lance/_versions/: 1.manifest  10.manifest  11.manifest  12.manifest  13.manifest  14.manifest  15.manifest  16.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest  7.manifest  8.manifest  9.manifest
.guided/knowledge/gamedex/: config.yaml
.guided/knowledge/gamedex/lance/chunks.lance/_transactions/: 0-c57b88de-26ab-43e5-891a-bd136d57fe69.txn  1-640d6459-c0ec-4805-9859-4779f6df438c.txn  10-4723ee90-d77a-4acd-b31c-670f5c3a7e0d.txn  11-07dcf565-02b2-48a0-a143-b85a360a24f4.txn  12-88bd5075-25cc-457f-bf05-562e486460f0.txn  13-e34a7cc4-8a8d-4b39-8d8b-1631ebedd748.txn  14-83fc3a36-f222-4c94-97a1-9d40729f2a18.txn  15-6dedee52-f51b-4c65-9225-3f210f1ebcc2.txn  16-097fc4f3-d13e-4e0c-8d41-516da09028e2.txn  17-44306368-8c6b-4228-9227-6d4ac4d7e090.txn  18-04b471f1-4010-4aec-bd4a-772d3438353a.txn  19-a45612e3-71be-4ab5-9b68-c9d8a65b45c6.txn  2-8a097a99-53db-4d23-b36f-c7b590d3162a.txn  (+10 more)
.guided/knowledge/test-base/: config.yaml  index.sqlite
.guided/knowledge/test-kb/: config.yaml  index.sqlite
.guided/knowledge/testbase/: config.yaml  sources.jsonl
.guided/operation/: logging.quiet-mode.worklog.md
.guided/prompts/: agent.ask.default.yml  agent.ask.rag.yml
.guided/testing/: logging.quiet-mode.tests.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: ask.rs  knowledge.rs  mod.rs  stats.rs  task.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  logging.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: chunker.rs  config.rs  index.rs  lancedb_index.rs  lib.rs  parser.rs  progress.rs  types.rs  vector_index.rs
crates/knowledge/src/chunk/: detection.rs  merging.rs  metadata.rs  mod.rs  pipeline.rs
crates/knowledge/src/chunk/splitters/: code.rs  fallback.rs  mod.rs  text.rs
crates/knowledge/src/embeddings/: config.rs  mod.rs  provider.rs
crates/knowledge/src/embeddings/providers/: mock.rs  mod.rs  ollama.rs  trigram.rs
crates/knowledge/src/metadata/: detect.rs  mod.rs  types.rs
crates/knowledge/src/rag/: ask.rs  mod.rs  search.rs  sources.rs  types.rs
crates/knowledge/src/tests/: mod.rs  rag_ranking.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  factory.rs  lib.rs  types.rs
crates/llm/src/providers/: mod.rs  ollama.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: builder.rs  lib.rs  loader.rs  types.rs
docs/: 0-PRD.md  1-SPEC.md  2-ENTITIES.md  3-DICTIONARY.md  4-ROADMAP.md
docs/releases/: phase-0.setup.md  phase-1.core.md  phase-2.llm.md  phase-4.ask.md  phase-5.2.knowledge-lancedb.md  phase-5.4.embeddings.md  phase-5.5-rag-validation-report.md  phase-5.5.0.rag-orchestrator.md  phase-5.5.1-results.md  phase-5.5.1.rag-accuracy.md  phase-5.5.2-progress-report.md
(+115 files in other folders)
