[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/llm",
    "crates/prompt",
    "crates/knowledge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guided Agent Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Templating
handlebars = "6.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Filesystem
walkdir = "2.5"

# Core crate
guided-core = { path = "crates/core" }

# LLM crate
guided-llm = { path = "crates/llm" }

# Prompt crate
guided-prompt = { path = "crates/prompt" }
