[package]
name = "guided-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
guided-core = { path = "../core" }
guided-llm = { path = "../llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
