[package]
name = "guided-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
guided-core = { path = "../core" }
guided-llm = { path = "../llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
lancedb = "0.22"
arrow-array = "56.0"
arrow-schema = "56.0"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.14"
