[package]
name = "guided-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
guided-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait = "0.1"
