[package]
name = "guided-prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
guided-core = { path = "../core" }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Templating
handlebars.workspace = true

# Filesystem
walkdir.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"
